feat: handle crud for semester
