# internal/router/semester/enter.go
@@ -1,0 +1,5 @@
+package semester
+
+type SemesterRouterGroup struct {
+	SemesterRouter
+}
